backend/tests/golden/queries/negative/04_select_columns/query.sdbl
ВЫБРАТЬ
    Контрагенты.Ссылка,
    Контрагенты.Наименование,
    Контрагенты.ИНН
ИЗ
    Справочник.Контрагенты КАК Контрагенты
